--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.8.2",
     "babel-preset-expo": "^55.0.8",
+    "clsx": "^2.1.1",
     "expo": "~54.0.33",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
@@ -42,6 +43,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "tailwind-merge": "^3.5.0",
     "tailwindcss": "^3.4.19"
   },
   "devDependencies": {
