--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-vector-icons/material-design-icons": "^12.4.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/drawer": "^7.9.2",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.8.2",
+    "@reduxjs/toolkit": "^2.11.2",
     "babel-preset-expo": "^55.0.8",
     "clsx": "^2.1.1",
     "expo": "~54.0.33",
@@ -43,6 +45,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "react-redux": "^9.2.0",
     "tailwind-merge": "^3.5.0",
     "tailwindcss": "^3.4.19"
   },
